--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.4.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "next": "12.2.5",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
